Implemented language change functions and config files. TODO: add the button to the pages and link it to the functions.